--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>virtual-pitch-manager</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>WinMix - Magyar Labdarúgó Statisztikai Központ</title>
+    <meta name="description" content="Professzionális labdarúgó statisztikák és elemzések. Fedezd fel a Getafe vs San Sebastian mérkőzések részletes adatait és trendeket a WinMix platformon." />
+    <meta name="author" content="WinMix" />
 
-    <meta property="og:title" content="virtual-pitch-manager" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="WinMix - Magyar Labdarúgó Statisztikai Központ" />
+    <meta property="og:description" content="Professzionális labdarúgó statisztikák és elemzések. Fedezd fel a Getafe vs San Sebastian mérkőzések részletes adatait és trendeket." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="@winmix_stats" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
